[package]
name = "amax-pfp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "amax_pfp"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
retour = { version = "0.3", features = ["static-detour"] }
simplelog = "0.12.1"
windows = { version = "0.48.0", features = ["Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_Graphics_Direct3D", "Win32_Foundation", "Foundation_Numerics", "Win32_System_SystemServices", "Win32_System_Memory", "Win32_System_LibraryLoader"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
winapi = { version = "0.3", features = ["winuser","d3d9","d3d9types","d3dcommon","d3d9caps"] }