[package]
name = "amax-pfp"
version = "0.1.0"
edition = "2021"


[lib]
name = "amax_pfp"
crate-type = ["cdylib"]

[dependencies]
log = { version = "0.4.20" }
simplelog = "0.12.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }

retour = { version = "0.3", features = ["static-detour"] }

windows = { version = "0.52.0", features = ["Win32_Graphics_Direct3D9", "Win32_Graphics_Gdi", "Win32_Graphics_Direct3D", "Win32_Foundation", "Foundation_Numerics", "Win32_System_SystemServices", "Win32_System_Memory", "Win32_System_LibraryLoader"] }

widestring = "1.1.0"
ureq = "2.8.0"
image = { version = "0.24.7", features = ["png","dds","bmp"] }
known-folders = "1.0.1"
fxhash = "0.2.1"
rand = "0.8.5"

#blur-plugins-core = { git = "https://github.com/tobii-dev/blur-plugins-core" }
blur-plugins-core = { path = "../blur-plugins-core" }
